--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -58,12 +58,12 @@ Experimental Methodology in Computational Science Research.\footnote{St
 Andrews, Scotland, August 4-8, 2014,
 \url{http://blogs.cs.st-andrews.ac.uk/emcsr2014/}}
 Indeed, a highly
-provisional first draft of this paper was completed by the end of the Summer
-School~\cite{emcsr_arxiv_draft}, with the ensuing weeks used in completing work and writing.  
+provisional first draft of this paper was completed by the end of the
+school~\cite{emcsr_arxiv_draft}, with the ensuing weeks used in completing work and writing.  
 The first three case studies
 were selected by discussing the interests of participants and forming groups
 and research questions around these. Therefore, these case studies were
-performed by subsets of the authors. These case studies are
+performed by subsets of the authors, and are
 presented below in Sections~\ref{s:group1}~--~\ref{s:group3}. The final case
 study was led by a lecturer of the summer school, was performed by all
 participants, and is presented in Section~\ref{s:group4}.
