--- a/SummerSchoolPaper/recomputation.tex
+++ b/SummerSchoolPaper/recomputation.tex
@@ -37,7 +37,7 @@ making code and method available, and citing data and
 software~\cite{stodden:practices}. Companies such as
 FigShare~\cite{figshare:citable} and GitHub~\cite{github:citable} are helping by
 making it easier for researchers to share code and data and also cite them
-through the use of DOIs (Digital Object Identifier). Several initiatives have
+through the use of DOIs (Digital Object Identifiers). Several initiatives have
 arisen to make researchers more aware of tools, and to further the development
 of tools, to make their research more reproducible, e.g., Mozilla Science
 Labs~\cite{mozillasciencelabs},
