add forward ref

--- a/SummerSchoolPaper/obstacles.tex
+++ b/SummerSchoolPaper/obstacles.tex
@@ -13,7 +13,7 @@ Amongst the obstacles and challenges that we identified are:
   and funding bodies do campaign for
   openness in the computational sciences (e.g.,~\cite{NSF}), 
   the prevalent impression from the discussions at 
-  the summer school is that there is still a lot to be done to increase 
+  the summer school is that there is yet a lot to be done to increase 
   awareness of how one can benefit from reproducibility.
 Mechanisms that reward those who deliver reproducible results are also
   still to become widespread.
@@ -29,7 +29,8 @@ Thus investing the time to offer reproducibility is difficult without
 {\bf Prerequisites} -- offering reproducibility in computational
   science is linked with giving access to data and code, both of which may
   be subject to legal limitations due to intellectual property and
-  data protection issues.
+  data protection issues. Indeed we encountered some of these issues
+  in one of our case studies (Section~\ref{s:group3}).
 Sharing data may additionally be bound to ethical responsibility, for instance
   if the data contain personal records or other sensitive information.  
 Even non-sensitive non-commercial data may not be readily redistributed
