more bibtex tidying

--- a/SummerSchoolPaper/group4.tex
+++ b/SummerSchoolPaper/group4.tex
@@ -4,7 +4,7 @@
 Research in computer science often involves humans, especially if the subject of study is how people and machines interact with each other (e.g., in HCI). This kind of research focuses on phenomena that involve human agents and are therefore not addressable strictly through computation. However, there are also strictly computational issues that are critical for the replicability of HCI research. In this case study we looked at current practice in HCI research through an example published experiment, and aimed at identifying the road blocks and difficulties that present themselves when reproducing statistical analysis of data obtained from human behavior.  
 
 \subsection{Background}
-The field of Human-computer Interaction heavily relies on the execution and analysis of empirical studies that involve humans. These results are used to, for example, build new interaction techniques and devices\cite{Nacenta:2008}, and propose new models of human behavior with computers \cite{Shoemaker:2012}. The reliability of the analysis and conclusions of these studies have been recently questioned. Problems identified include the fact that barely any results are replicated \cite{hornbaek:replications}, that the research is often difficult or impossible to replicate \cite{wilson:2011}, and that replicated results are difficult to publish and share to the larger community \cite{wilson:2012}. The HCI community is currently trying to address some of these problems through new venues for publication (e.g., ReplyCHI~\cite{Wilson:2013,Wilson:2014}), the creation of new tools~\cite{Mackay:2007}, and efforts to change the research culture and incentives (ACM CHI, arguably the most important conference in the field, introduced in 2013 a replication award or distinction for papers that address replicability).
+The field of Human-computer Interaction heavily relies on the execution and analysis of empirical studies that involve humans. These results are used to, for example, build new interaction techniques and devices\cite{Nacenta:2008}, and propose new models of human behavior with computers \cite{Shoemaker:2012}. The reliability of the analysis and conclusions of these studies have been recently questioned. Problems identified include the fact that barely any results are replicated \cite{hornbaek:replications}, that the research is often difficult or impossible to replicate \cite{wilson:2011}, and that replicated results are difficult to publish and share to the larger community \cite{wilson:2012}. The HCI community is currently trying to address some of these problems through new venues for publication (e.g., ReplyCHI~\cite{wilson:2013,wilson:2014}), the creation of new tools~\cite{Mackay:2007}, and efforts to change the research culture and incentives (ACM CHI, arguably the most important conference in the field, introduced in 2013 a replication award or distinction for papers that address replicability).
 
 Although the problem of replicability of experiments with humans is difficult and will likely require significant efforts from the community, the recomputability of these results and the associated statistical analysis has received relatively little attention, even though it is probably one of the most significant sources of inaccuracy and incorrect data in the field. Recomputability in HCI experiments refers mostly to the ability of others (not authors) to replicate the statistical analysis and statistical conclusions of a paper utilizing the same recorded data from the experiment. 
 
