--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -875,7 +875,7 @@
 
 @InProceedings{wilson:2011,
   author      =	{Wilson, Max L. and Mackay, Wendy and Chi, Ed and Bernstein, Michael and Russell, Dan and Thimbleby, Harold},
-  title	      =	{RepliCHI - CHI Should Be Replicating and Validating Results More: Discuss},
+  title	      =	{{RepliCHI} - {CHI} Should Be Replicating and Validating Results More: Discuss},
   booktitle   =	{CHI '11 Extended Abstracts on Human Factors in Computing Systems},
   year	      =	{2011},
   isbn	      =	{978-1-4503-0268-5},
@@ -892,12 +892,11 @@
 
 @InProceedings{wilson:2012,
   author      =	{Wilson, Max and Mackay, Wendy and Chi, Ed and Bernstein, Michael and Nichols, Jeffrey},
-  title	      =	{RepliCHI SIG: From a Panel to a New Submission Venue for Replication},
+  title	      =	{{RepliCHI SIG}: From a Panel to a New Submission Venue for Replication},
   booktitle   =	{CHI '12 Extended Abstracts on Human Factors in Computing Systems},
-  series      =	{CHI EA '12},
   year	      =	{2012},
   isbn	      =	{978-1-4503-1016-1},
-  location    =	{Austin, Texas, USA},
+  location    =	{Austin, TX, USA},
   pages	      =	{1185--1188},
   numpages    =	{4},
   url	      =	{http://doi.acm.org/10.1145/2212776.2212419},
@@ -910,9 +909,8 @@
 
 @InProceedings{wilson:2013,
   author      =	{Wilson, Max L. L. and Resnick, Paul and Coyle, David and Chi, Ed H.},
-  title	      =	{RepliCHI: The Workshop},
+  title	      =	{{RepliCHI}: The Workshop},
   booktitle   =	{CHI '13 Extended Abstracts on Human Factors in Computing Systems},
-  series      =	{CHI EA '13},
   year	      =	{2013},
   isbn	      =	{978-1-4503-1952-2},
   location    =	{Paris, France},
@@ -928,12 +926,11 @@
 
 @InProceedings{wilson:2014,
   author      =	{Wilson, Max L. and Chi, Ed H. and Reeves, Stuart and Coyle, David},
-  title	      =	{RepliCHI: The Workshop II},
+  title	      =	{{RepliCHI}: The Workshop {II}},
   booktitle   =	{CHI '14 Extended Abstracts on Human Factors in Computing Systems},
-  series      =	{CHI EA '14},
   year	      =	{2014},
   isbn	      =	{978-1-4503-2474-8},
-  location    =	{Toronto, Ontario, Canada},
+  location    =	{Toronto, ON, Canada},
   pages	      =	{33--36},
   numpages    =	{4},
   url	      =	{http://doi.acm.org/10.1145/2559206.2559233},
