--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -436,7 +436,8 @@
   author      =	{Hartson, Rex and Pyla, Pardha S},
   title	      =	{The UX book: process and guidelines for ensuring a quality user experience},
   year	      =	{2012},
-  publisher   =	{Elsevier}
+  publisher   =	{Elsevier},
+  doi = {10.1016/B978-0-12-385241-0.00040-3}
 }
 
 @InProceedings{hornbaek:replications,
