--- a/SummerSchoolPaper/ack.tex
+++ b/SummerSchoolPaper/ack.tex
@@ -8,8 +8,9 @@ author.
 
 First we thank the organisers: John McDermott, Angela Miguel, and Lakshitha de Silva for organisational and technical help.
 
-We thank the various sponsors of the summer school for financial and other forms of assistance.
-These were: SICSA (the Scottish Informatics and Computer Science Alliance); 
+We thank the various sponsors of the summer school for financial and
+other forms of assistance:
+SICSA (the Scottish Informatics and Computer Science Alliance); 
 Microsoft Azure; the Software Sustainability Institute; 
 the School of Computer Science at the University of St Andrews; 
 and the EPSRC Impact Acceleration Award ``Recomputation.org: Making
