minor tweaks to into

--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -2,10 +2,10 @@
 \label{s:intro}
 
 
-We consider reproducibility in the computational sciences in this paper.  We
+In this paper we consider reproducibility in the computational sciences. We
 interpret the computational sciences as including computer science, but also any
 other science in which computational work plays an important role, such as
-physics or psychology. The central hypothesis of this paper is that
+physics, biology or psychology. The central hypothesis of this paper is that
 reproducibility is a cornerstone of the scientific method, and should therefore
 be a cornerstone of the computational sciences. We ask to what extent this is true
 and what challenges arise in reproducing work in the computational sciences.
