Minor revisions throughout

--- a/SummerSchoolPaper/ack.tex
+++ b/SummerSchoolPaper/ack.tex
@@ -11,7 +11,7 @@ First we thank the organisers: John McDermott, Angela Miguel, and Lakshitha de S
 We thank the various sponsors of the summer school for financial and
 other forms of assistance:
 SICSA (the Scottish Informatics and Computer Science Alliance); 
-Microsoft Azure; the Software Sustainability Institute; 
+Microsoft Research; the Software Sustainability Institute; 
 the School of Computer Science at the University of St Andrews; 
 and the EPSRC Impact Acceleration Award ``Recomputation.org: Making
 Computational Experiments Recomputable''
