--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -26,16 +26,16 @@ reproducible is research that is ``conditioned'' on one particular ethics form?
 
 The second case study considers whether parallel and distributed computational
 experiments are more or less reproducible than serial ones. Computational
-experiments are at the core of much research, especially in artificial
+experiments are at the core of much research, such as in artificial
 intelligence, where the motivation for this case study lies. In recent years,
 multi-core and multi-processor machines have become increasingly prevalent. To
 make use of this increased processing power, experiments need to utilise
 multiple resources at once. But is this inherently detrimental to
 reproducibility?
 
-While computer science likely accounts for the majority of computational
-experiments, they are becoming increasingly important in other areas. In physics
-or chemistry for example, simulations of physical processes help scientists gain
+While computer science may account for a significant fraction of computational
+experiments, they are important in almost every scientific discipline. In environmental science, 
+medicine, physics and chemistry for example, simulations of physical processes help scientists gain
 insights. Our third case study is motivated by this fact and asks how
 reproducible computational scientific experiments are from disciplines other than
 computer science. We consider experiments from several research areas. Given
@@ -90,4 +90,4 @@ data change, new tables and figures can be regenerated automatically. Finally,
 we have endeavoured to make it reproducible through measures such as providing
 virtual machines (VMs) for aspects of our work, not least a VM in which
 the paper itself can be rebuilt, and we welcome readers to attempt to
-reproduce it.
+reproduce it - either locally or using cloud computing.
