--- a/SummerSchoolPaper/obstacles.tex
+++ b/SummerSchoolPaper/obstacles.tex
@@ -32,7 +32,7 @@ Thus investing the time to offer reproducibility is difficult without
   data protection issues. Indeed we encountered some of these issues
   in one of our case studies (Section~\ref{s:group3}).
 Sharing data may additionally be bound to ethical responsibility, for instance
-  if the data contain personal records or other sensitive information.  
+  if the data contain personal records or other sensitive information. 
 Even non-sensitive non-commercial data may not be readily redistributed
   without assuring proper ethical consent from the data originators.
 
@@ -70,9 +70,8 @@ Interdisciplinarity is inherent in the idea of the computational
 sciences, which
   merge computational techniques with diverse domains of science.
 Consequently, one has to take into account that the users who will attempt to
-  reproduce the results of an experiment may be
-  astronomers, biologists, chemists, geologists, linguists, mathematicians,
-  oceanographers, physicists, or statisticians.
+  reproduce the results of an experiment may be from a different discipline.
+  %astronomers, biologists, chemists, geologists, linguists, mathematicians,  oceanographers, physicists, or statisticians.
 Last but not least, dissemination of data, and especially of executable
   programs is subject to security issues associated with both the security
   of computer systems and the safety of the personal data of the researchers who
