--- a/SummerSchoolPaper/recomputation.tex
+++ b/SummerSchoolPaper/recomputation.tex
@@ -52,7 +52,8 @@ easier through the use of VMs), version control and clearly
 separated experimental parameters~\cite{davison:reproducibility}. Mesirov
 describes one particular workflow to make it easy to track and package genomic
 data~\cite{mesirov:accessible}. Our paper attempts to follow these best
-practices, uses version control and is available to recompute on a VM.
+practices, uses version control and is available to recompute on a VM either 
+locally or in the public cloud.
 
 %Each of the case studies presented in this paper builds on the current
 %state of the art. While others have looked at code, method and data
