--- a/SummerSchoolPaper/school.tex
+++ b/SummerSchoolPaper/school.tex
@@ -21,8 +21,7 @@ it may be possible to leverage this for creating
 reproducible experiments by sharing these virtual machines. After that,
 Alexander Konovalov from St Andrews gave a tutorial on creating
 virtual machines in Microsoft Azure (6-month passes to access the
-latter were provided free of charge to all participants thanks to Microsoft Research's
-generosity).
+latter were provided to all participants courtesy to Microsoft Research).
 
 Two members of the Software Sustainability
 Institute\footnote{\url{http://www.software.ac.uk/}}, Neil Chue Hong
