--- a/SummerSchoolPaper/open.tex
+++ b/SummerSchoolPaper/open.tex
@@ -45,7 +45,7 @@ some of the data and/or programs used in various parts of our paper do not allow
 many computations involved in constructing the data must be run by hand.  Also some of the tables in this paper are static, with data entered manually rather than reanalysed by Sweave. This contrasts negatively with Brown's executable paper~\cite{brown}.  
 In terms of reproducibility, we feel we have been mostly successful.  
 Provision of materials via GitHub will be helpful for those who wish to adapt or reproduce our work.
-We have provided VMs where possible and appropriate, and can distribute two of them: this should enable the recomputation of our paper.  
+We have provided VMs where possible and appropriate, and can distribute two of them: this should enable the recomputation of our paper.  This can be performed either locally, or using VMs deployed in Microsoft Azure requiring no software installation on a users machine. 
 While we might pat ourselves on the back for this, we feel it is better to be cautious. We ourselves have discussed potential issues, such as ethical and legal, and unforeseen technical issues might prevent reproducibility. The real test of reproducibility must be time.
 It is interesting to speculate: for example, if we run a second summer school in 2015, we might ask participants to reproduce this paper and see how we did this year!
 
