minor space tweaks

--- a/SummerSchoolPaper/group3.tex
+++ b/SummerSchoolPaper/group3.tex
@@ -36,7 +36,7 @@ Simulation~\cite{ssj},
 which had to be downloaded from the Internet. After that, we were able to run
 the code.
 
-We encountered legal obstacles in the following two areas.
+We encountered legal obstacles in two areas.
 \begin{itemize} 
 \item Code-related: the software was developed as part of the EU project
     QUANTICOL~\cite{quanticol}, which is funded by the European Commission as part of its 7th
