--- a/SummerSchoolPaper/obstacles.tex
+++ b/SummerSchoolPaper/obstacles.tex
@@ -56,11 +56,11 @@ Third, there are numerous tradeoffs to be made:
   \end{inparaenum}
     
 {\bf Dissemination} -- even if all of the above obstacles are overcome, 
-  distribution and long-term persistence of the reproducible experiments
+  distribution and long-term persistence of reproducible experiments
   pose challenges.
 First, finding a venue for long-term preservation of large datasets or even 
-  moderately-sized VM-based packages may be an issue.
-This is especially the case if one aims at blending software and data
+  moderately-sized VM-based packages may be an issue, especially
+if one aims at blending software and data
   dissemination with traditional academic publishing.
 Second, given that one of the key aims of reproducibility in science
   is to offer independent verification, the amount of knowledge 
